fix: icon size on firefox

--- a/front/src/BeerCrackerz.scss
+++ b/front/src/BeerCrackerz.scss
@@ -25,7 +25,7 @@ nav {
   bottom: 1rem;
   position: absolute;
   right: 1rem;
-  width: 4.8rem;
+  width: 48px;
   z-index: 20;
 
   transition: right var(--aside-transtion-duration);
