--- a/front/src/BeerCrackerzAuth.scss
+++ b/front/src/BeerCrackerzAuth.scss
@@ -18,10 +18,10 @@ nav {
   display: flex;
   bottom: 1rem;
   position: absolute;
-  height: 4.8rem;
+  height: 48px;
   /* Force nav to stick to aside's left even when collapsed */
   right: calc(var(--aside-width) + var(--aside-offset) + 1rem);
-  width: 4.8rem;
+  width: 48px;
   z-index: 20;
 
   transition: right var(--aside-transtion-duration);
@@ -71,12 +71,12 @@ nav {
   background-color: var(--color-bg-a9);
   border: 2px solid var(--color-bg);
   border-radius: .5rem;
-  height: 4.8rem;
+  height: 48px;
   opacity: 0;
   position: absolute;
   right: 1rem;
   top: 1rem;
-  width: 4.8rem;
+  width: 48px;
   z-index: 20;
 
   transition: opacity var(--transition);
